--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+.tiptap p.is-editor-empty:first-child::before {
+  color: theme("colors.muted.foreground");
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+.tiptap.ProseMirror {
+  outline: none;
+}
