--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,13 +68,13 @@
   }
 }
 
-.tiptap p.is-editor-empty:first-child::before {
+
+.tiptap p.is-editor-empty:first-child::before{
   color: theme("colors.muted.foreground");
-  content: attr(data-placeholder);
-  float: left;
-  height: 0;
-  pointer-events: none;
+  content:attr(data-placeholder);
+  float:left;
+  height: 0;pointer-events: none;
 }
-.tiptap.ProseMirror {
+.tiptap.ProseMirror{
   outline: none;
 }
